Fixes nav spacing.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8467,7 +8467,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 @media only all and (min-width: 50.0625em) {
   .nav-secondary_item + .nav-secondary_item {
-    margin-top: 1px;
+    margin-top: 10px;
   }
 }
 @media only all and (max-width: 50em) {
@@ -8519,7 +8519,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 @media only all and (min-width: 50.0625em) {
   .nav-secondary_link {
     display: inline-block;
-    padding: 0.22222222em 0.55555556em;
+    padding: 0.27777778em 0.83333333em;
     border-left-style: solid;
     border-left-width: 5px;
     font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
